--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "disconnect": "^1.2.2",
     "framer-motion": "^12.12.1",
+    "lodash": "^4.17.21",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -23,12 +24,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@prisma/client": "^6.8.2",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "null-loader": "^4.0.1",
     "postcss": "^8.4.23",
     "prisma": "^6.8.2",
     "tailwindcss": "^3.3.2",
