--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# prisma
+src/generated/
+*.db
+*.db-journal
+
+# local development files
+conversion-notes.md
